fix: arrumando o z-index do side menu

--- a/ArteAcucarClient/src/app/components/sidebar-menu/sidebar-menu.component.scss
+++ b/ArteAcucarClient/src/app/components/sidebar-menu/sidebar-menu.component.scss
@@ -29,6 +29,7 @@
   padding: 10px;
   overflow: auto;
   transition: all 0.3s;
+  z-index: 999;
 
   &::-webkit-scrollbar {
     display: none;
